[tool.poetry]
name = "melat"
version = "0.1.0"
description = ""
authors = ["Javier Caballero Lloris <jacallo@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ping3 = "^1.4"
tqdm = "^4.30"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
flake8-bugbear = "^18.8"
flake8-builtins = "^1.4"
flake8-import-order = "^0.18.0"
flake8-bandit = "^2.1"
pep8-naming = "^0.8.0"
black = {version = "^black-18.9b0", allows-prereleases = true}
rope = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
